  ``const char *`` as the string is stored beyond the call.

- Issue #2422: When compiled with the ``--with-valgrind`` option, the
  pymalloc allocator will be automatically disabled when running under
  Valgrind.  This gives improved memory leak detection when running
  under Valgrind, while taking advantage of pymalloc at other times.

Library
-------

- The default size of the re module's compiled regular expression cache has
  been increased from 100 to 500 and the cache replacement policy has changed
  from simply clearing the entire cache on overflow to randomly forgetting 20%
  of the existing cached compiled regular expressions.  This is a performance
  win for applications that use a lot of regular expressions and limits the
  impact of the performance hit anytime the cache is exceeded.

- Issue #7113: Speed up loading in configparser. Patch by Łukasz Langa.

- Issue #9032: XML-RPC client retries the request on EPIPE error. The EPIPE
  error occurs when the server closes the socket and the client sends a big
  XML-RPC request.

- Issue #4629: getopt raises an error if an argument ends with = whereas getopt
  doesn't except a value (eg. --help= is rejected if getopt uses ['help='] long
  options).

- Issue #7989: Added pure python implementation of the `datetime`
  module.  The C module is renamed to `_datetime` and if available,
  overrides all classes defined in datetime with fast C impementation.
  Python implementation is based on the original python prototype for
  the datetime module by Tim Peters with minor modifications by the
  PyPy project.  The test suite now tests `datetime` module with and
  without `_datetime` acceleration using the same test cases.

- Issue #7895: platform.mac_ver() no longer crashes after calling os.fork()

- Issue #9323: Fixed a bug in trace.py that resulted in loosing the
  name of the script being traced.  Patch by Eli Bendersky.

- Issue #9282: Fixed --listfuncs option of trace.py.  Thanks Eli
  Bendersky for the patch.
